--- a/index.html
+++ b/index.html
@@ -104,6 +104,20 @@
         margin: 0 auto;
       }
     </style>
+
+<!-- Google Analytics -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-43500518-1');
+ga('send', 'pageview');
+
+</script>
+<!-- End Google Analytics -->
+
   </head>
   <body>
 
@@ -314,5 +328,17 @@
         </div>
       </div>
     </div>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-43500518-1', 'mp-bitstarter-mooc.herokuapp.com');
+  ga('send', 'pageview');
+
+</script>
+
   </body>
 </html>
