--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@ ga('send', 'pageview');
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <!--<button class="btn btn-success btn-large">Preorder</button>-->
+	    <a class="coinbase-button" data-code="fa5cdc6138e9a4757788814f9a8a2f6e" href="https://coinbase.com/checkouts/fa5cdc6138e9a4757788814f9a8a2f6e">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
